--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "travel-community-backend",
+  "name": "travel-community-frontend",
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1",
-    "sequelize": "^6.6.2",
-    "mysql2": "^2.2.5",
-    "jsonwebtoken": "^8.5.1",
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "helmet": "^4.6.0",
-    "csurf": "^1.11.0",
-    "cookie-parser": "^1.4.5",
-    "dotenv": "^10.0.0"
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "react-redux": "^7.2.4",
+    "redux-thunk": "^2.3.0",
+    "material-ui": "^0.20.2",
+    "jwt-decode": "^3.1.2",
+    "i18next": "^20.2.4",
+    "i18next-browser-languagedetector": "^6.1.1",
+    "i18next-http-backend": "^1.1.0",
+    "react-i18next": "^11.8.5"
   }
 }
